Remove purple-admin files, load it from npm

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
     <link href="/assets/node_modules/mdi/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="/assets/node_modules/toastr/build/toastr.css" rel="stylesheet"/>
-    <link href="/assets/css/style.css" rel="stylesheet"/>
+    <link href="/assets/node_modules/purple-admin/css/style.css" rel="stylesheet"/>
     <link href="/assets/css/main.css" rel="stylesheet"/>
     <script src='https://www.google.com/recaptcha/api.js?onload=reCaptchaCallback' async defer>></script>
 </head>
