--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     <div class="errors" data-field="password"></div>
                 </div>
                 <div class="form-group">
-                    <label>ReCaptcha validation *</label>
+                    <!--<label>ReCaptcha validation *</label>-->
                     <div id="g-recaptcha-container"></div>
                     <div class="errors" data-field="g-recaptcha-response"></div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="errors" data-field="lastname"></div>
                 </div>
                 <div class="form-group">
-                    <label>ReCaptcha validation *</label>
+                    <!--<label>ReCaptcha validation *</label>-->
                     <div id="g-recaptcha-container"></div>
                     <div class="errors" data-field="g-recaptcha-response"></div>
                 </div>
